<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otherGamelan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".OtherGamelanActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        app:alignmentMode="alignMargins"
        app:columnCount="2"
        app:columnOrderPreserved="false"
        app:rowCount="2">

        <!--Row 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewGA"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:paddingRight="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gamelan_asmaradana" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gamelan_asmaradana"
                    android:textColor="@color/green" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewBronzage"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:paddingRight="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/bronzage_gamelan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bronzage"
                    android:textColor="@color/green" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Row 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewDjoko"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:paddingRight="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/djoko" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/djoko_mangkreng" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewSingamurti"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:paddingRight="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/singamurti" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gamelan_singamurti" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </android.support.v7.widget.GridLayout>

</FrameLayout>